@@ -1,10 +1,12 @@
 package com.anst.sd.api.app.impl.task;
 
 import com.anst.sd.api.app.api.project.ProjectRepository;
+import com.anst.sd.api.app.api.tag.TagRepository;
 import com.anst.sd.api.app.api.task.TaskRepository;
 import com.anst.sd.api.app.api.task.UpdateTaskInBound;
 import com.anst.sd.api.domain.notification.PendingNotification;
 import com.anst.sd.api.domain.project.Project;
+import com.anst.sd.api.domain.tag.Tag;
 import com.anst.sd.api.domain.task.Task;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -13,7 +15,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -22,6 +23,7 @@ public class UpdateTaskUseCase implements UpdateTaskInBound {
     private final TaskRepository taskRepository;
     private final ProjectRepository projectRepository;
     private final DateConverterDelegate dateConverterDelegate;
+    private final TagRepository tagRepository;
 
     @Override
     @Transactional
@@ -41,13 +43,20 @@ public class UpdateTaskUseCase implements UpdateTaskInBound {
         if (updated.getPendingNotifications() != null && updated.getDeadline() != null) {
             convertedNotifications = updated.getPendingNotifications().stream()
                     .map(notification -> dateConverterDelegate.convertToInstant(updated.getDeadline(), notification))
-                    .collect(Collectors.toList());
+                    .toList();
         }
         original.setPendingNotifications(convertedNotifications);
         if (updated.getUpdatedProjectId() != null &&
-            !updated.getUpdatedProjectId().equals(original.getProject().getId())) {
+                !updated.getUpdatedProjectId().equals(original.getProject().getId())) {
             Project newProject = projectRepository.getByIdAndUserId(updated.getUpdatedProjectId(), userId);
             original.setProject(newProject);
+        }
+        if (updated.getTags() != null) {
+            List<Long> updatedTagIds = updated.getTags().stream()
+                    .map(Tag::getId)
+                    .toList();
+            List<Tag> updatedTags = tagRepository.findAllByIds(updatedTagIds);
+            original.setTags(updatedTags);
         }
     }
 }
